--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,41 @@
   <groupId>cicd-calculator</groupId>
   <artifactId>calculatorCicd</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <build>  
+  <pluginManagement>
+  <plugins>
+	<plugin>
+ 		<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version> 
+ 	</plugin>
+ 	<plugin>
+ 		<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version> 
+ 	</plugin>
+  </plugins>  
+  </pluginManagement>  
+  </build>
+  
+  <distributionManagement>
+  <snapshotRepository>
+    <id>calculatorCICD</id>
+    <name>calculatorCICD</name>
+    <url>http://localhost:8081/repository/calculatorCICD/</url>
+  </snapshotRepository>
+</distributionManagement>
+
+  <dependencies>
+  	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.12</version>
+    	<scope>test</scope>
+	</dependency>
+  </dependencies> <!-- https://mvnrepository.com/artifact/junit/junit -->
+  
   <properties>
    <maven.compiler.source>6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
